# codebase-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  README.md  SETUP.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_backend.py  run_backend.sh  test_fastapi.py
codebase_driven_agent/: __init__.py  config.py  main.py
codebase_driven_agent/agent/: __init__.py  callbacks.py  executor.py  graph_executor.py  input_parser.py  memory.py  output_parser.py  prompt.py  session_manager.py  utils.py
codebase_driven_agent/api/: __init__.py  middleware.py  models.py  routes.py  sse.py
codebase_driven_agent/tools/: __init__.py  ast_analyzer.py  ast_parser.py  base.py  bash_tool.py  code_tool.py  database_tool.py  glob_tool.py  grep_tool.py  log_tool.py  read_tool.py  registry.py  webfetch_tool.py  websearch_tool.py
codebase_driven_agent/utils/: cache.py  database.py  extractors.py  log_query.py  logger.py  metrics.py
docs/: API.md  AST_SEARCH.md  AST_SETUP.md  BUILTIN_TOOLS.md  CHANGELOG.md  CODE_SEARCH_DESIGN.md  CONFIG.md  DESKTOP_APP.md  DESKTOP_APP_DEBUGGING.md  DEVELOPMENT.md  EXAMPLES.md  EXTENDING.md  LOCAL_TESTING.md  OPTIMIZATION_RECOMMENDATIONS.md  PRODUCT_FEATURE_OPTIMIZATION.md  USAGE.md  USER_INTERACTION_TESTING.md  WEB_UI.md  interaction-flow.md
docs/logyi_sample/: logyi_config.py  logyi_service.py
docs/spl_reference/: .meta.json  index.html  reference.md
openspec/: project.md
scripts/: build-desktop.ps1  build-desktop.sh  create_env_example.py  delete_query_view_history.py  fix-venv-for-packaging.ps1  prepare-venv.ps1  quick_test.py  restart.sh  start.sh  stop.sh  test_ast_parser.py  test_ast_simple.py  test_user_interaction.py
tests/: test_agent_integration.py  test_api_agent_integration.py  test_bash_tool.py  test_builtin_tools_integration.py  test_code_tool.py  test_database_tool.py  test_extractors.py  test_glob_tool.py  test_grep_tool.py  test_log_query.py  test_read_tool.py  test_user_interaction.py  test_webfetch_tool.py  test_websearch_tool.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  remotion.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/electron/: backend.js  main.js  preload.js
web/scripts/: afterPack.js  beforePack.js  export-videos.ps1  export-videos.sh  fix-electron-paths.js  setup-chrome-headless.sh  test-video.ps1  test-video.sh
web/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  (+1 more)
(+105 files in other folders)
